2007-11-07  Markus Deuling  <deuling@de.ibm.com>

	* gdbarch.sh (legacy_virtual_frame_pointer): Add gdbarch parameter.
	* gdbarch.{c,h}: Regenerate.
	* arch-utils.c (legacy_virtual_frame_pointer): Add gdbarch parameter.
	Replace current_gdbarch by gdbarch.
	* m32c-tdep.c (m32c_virtual_frame_pointer): Likewise.
	* mips-tdep.c (mips_virtual_frame_pointer): Likewise.
	* spu-tdep.c (spu_virtual_frame_pointer): Likewise.

2007-11-07  Markus Deuling  <deuling@de.ibm.com>

	* shnbsd-tdep.c (shnbsd_supply_gregset, shnbsd_collect_gregset): Use
	get_regcache_arch to get at the current architecture by regcache.
	* xstormy16-tdep.c (xstormy16_frame_prev_register): Use get_frame_arch
	to get at the current architecture by frame_info.
	* fbsd-nat.c (fbsd_make_corefile_notes): Use get_regcache_arch to get
	at the current architecture by regcache.
	* gnu-v3-abi.c (gnuv3_skip_trampoline): Use get_frame_arch to get at
	the current architecture by frame_info.
	(build_gdb_vtable_type): Replace current_gdbarch by gdbarch.
	* aix-thread.c (special_register_p): Add gdbarch as parameter.
	(fetch_regs_kernel_thread, store_regs_kernel_thread): Add gdbarch to
	caller of special_register_p.

2007-11-07  Markus Deuling  <deuling@de.ibm.com>

	* infcall.c (call_function_by_hand): Use get_frame_arch to get at the
	current architecture by frame_info.

2007-11-07  Markus Deuling  <deuling@de.ibm.com>

	* xtensa-tdep.h (SIZEOF_GREGSET, XTENSA_ELF_NGREG) Remove.

2007-11-07  Markus Deuling  <deuling@de.ibm.com>

	* s390-nat.c (supply_gregset, fill_gregset): Use get_regcache_arch to
	get at the current architecture by regcache.
	(SUBOFF): Add gdbarch to macro definition.

2007-11-07  Markus Deuling  <deuling@de.ibm.com>

	* gdbarch.sh (breakpoint_from_pc): Add gdbarch parameter.
	* gdbarch.{c,h}: Regenerate.

	* xtensa-tdep.c (xtensa_breakpoint_from_pc): Add gdbarch parameter.
	Replace current_gdbarch by gdbarch.
	* sh-tdep.c (sh_breakpoint_from_pc): Likewise.