@@ -1,3 +1,8 @@
+2007-11-07  Vladimir Prus  <vladimir@codesourcery.com>
+
+	* gdb.mi/mi-var-child.c (do_child_deletion): New.
+	* gdb.mi/mi-var-child.exp: Run child_deletion tests.
+	
 2007-11-05  Luis Machado  <luisgpm@br.ibm.com>
 
 	* gdb.base/printcmds.exp: New function
